--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manish Phartiyal</title>
   </head>
@@ -61,7 +62,7 @@
     }, 2000);
   </script>
 
-   <script src="https://kit.fontawesome.com/1c2c2462bf.js" crossorigin="anonymous"></script>
+   <script defer src="https://kit.fontawesome.com/1c2c2462bf.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
